# mirai

./: .gitignore  Procfile  gcloud_deploy.sh  pyproject.toml  requirements.txt  start.sh
.github/workflows/: main_mirai.yml
src/: main.py  main3.py
